Stop long .source-credits from causing horizontal scroll on narrow screens

--- a/views/sass/_components.scss
+++ b/views/sass/_components.scss
@@ -508,6 +508,7 @@ input[type].form-control {
     select {
         margin-left: 0.3em;
         vertical-align: 0.1em;
+        max-width: 100%;
     }
 }
 
